# AABB-platformer

Project/: .gitignore  readme.md
Project/Godot/: BoundingBox2.gd  Rust.gdextension  base.tscn  project.godot  rust.gdextension  stuff.gd
Project/Godot/Main/: game_manager.tscn
Project/Godot/Player/: player.tscn
Project/Rust/: Cargo.toml  full_compile.bat
Project/Rust/.cargo/: Config.toml
Project/Rust/src/: bounding_box.rs  controler.rs  godotbox.rs  lib.rs  playerbehaviour.rs
