[package]
name = "rust_based_components"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
[dependencies]
godot={ git = "https://github.com/godot-rust/gdext", branch = "master" }
[profile.release]
strip=true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true
[profile.dev]
panic = "abort"
